Add event reporting for job resource utilisation. (#398)
* Add event reporting for job resource utilisation.

* Update all generated clients, fix utilisation event timing.

* Switch to use generated String() method for proto massages.
This fixes issues with gogo proto text marshaller panicking on private fields.

* Fix typo in file name.

* Add test for utilisation event reporter

* Code cleanup.

* Add support for resource usage to armadactl.

* Update default executor configuration.

* Code style.
